--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calc</title>
+    <style>
+        *{
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body{
+            font-size: 16px;
+            font-family: 'Roboto','Tahoma',sans-serif;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
